# frostwall-beam

./: Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-11-adversarial-fixes.md
mailbox/: Cargo.toml
mailbox/src/: main.rs
src/: App.tsx  errors.ts  history.ts  i18n.tsx  main.tsx  styles.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  crypto.rs  discovery.rs  internet.rs  lib.rs  liveness.rs  main.rs  pairing.rs  protocol.rs  session.rs  transfer.rs  transport.rs
